2003-01-27  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-check-blackholes) 
	(spam-blackhole-good-server-regex): new variable to skip some IPs
	when checking blackholes; use it
	(spam-check-bogofilter-headers) 
	(spam-bogofilter-bogosity-positive-spam-header): new variable, in
	case more X-Bogosity is used than just "Yes/No"
	(spam-ham-move-routine): semi-fixed, only first article is
	properly moved now

2003-01-27  Jesper Harder  <harder@ifa.au.dk>

	* gnus-util.el (gnus-kill-buffer): Remove buffer from gnus-buffers
	as well.
	
	* gnus-sum.el (gnus-select-newsgroup): Use gnus-kill-buffer.
	
	* gnus-score.el (gnus-score-headers, gnus-score-find-bnews): do.
	
	* gnus-start.el (gnus-save-newsrc-file, gnus-clear-system): do.
	
	* gnus-bcklg.el (gnus-backlog-shutdown): do.
	
	* gnus-srvr.el (gnus-server-exit, gnus-browse-exit): do.

2003-01-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-make-menu-bar): Added M-& to marks. 

2003-01-26  Jesper Harder  <harder@ifa.au.dk>

	* mm-decode.el (mm-dissection-list): Remove.
	(mm-dissect-singlepart): Don't push to mm-dissection-list, it's
	only used in mm-remove-all-parts.
	(mm-remove-all-parts): Remove it, it's never called.

2003-01-25  Simon Josefsson  <jas@extundo.com>

	* gnus-group.el (gnus-group-make-group): Report errors.

	* nnimap.el (nnimap-request-create-group): Ditto.

	* sieve-manage.el (sieve-manage-is-okno): Parse literal strings.

	* sieve.el (sieve-upload): Fix error printing.

	* mm-encode.el (mm-qp-or-base64): Always QP iff
	mm-use-ultra-safe-encoding and cleartext PGP.

	* gnus-sum.el (gnus-summary-select-article): Inhibit
	redisplay (mainly for secured messages).

	* nnmail.el (nnmail-article-group): Copy body too (but don't
	process it).

2003-01-25  Jesper Harder  <harder@ifa.au.dk>

	* gnus-art.el (gnus-article-setup-buffer): Reset
	gnus-button-marker-list.

2003-01-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>
